--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -59,6 +59,11 @@ include: ["_pages"]
 collections:
   - projects
 
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-0VFZW8X081"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
